k8s/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: firehose-remote-write
