k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.kubernetes.io/name: firehose-remote-write
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "16"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16m"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "1024m"
  name: firehose-remote-write
spec:
  ingressClassName: nginx
  rules:
  - host: firehose-remote-write.utility.stackblitz.dev
    http:
      paths:
      - backend:
          service:
            name: firehose-remote-write
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - firehose-remote-write.utility.stackblitz.dev
    secretName: firehose-remote-write-tls
